** New: Added Phase Tracking.
** New: Added Hard Mode detection. (HM)
** New: Added Alert and Timer for Dark Invocation.
** New: Added Enrage Timer.
** New: Added Tank-Swap monitor for Szath in Phase 2.
** New: Added Mechanic Spy for Traitorous Blood. (Mind Control Debuff)
** New: Added Timer for Traitorous Blood.
** New: Added Timer for Infected Wounds.
** New: Added Timer for Scorching Shards.

----
v1.1.3

Infernal Dawn
* Warboss Drak
** Fixed: Final Phase error.

Primeval Feast
* Fixed: Atrophinius gains his missing title of Grandmaster.

German Translations
* Updated for Primeval Feast.

----
v1.1.2

System
* Change: Each Boss Mod will now catch any errors if KBM doesn't fully start for any reason. This will prevent it running and spamming errors.

Player Castbar
* Change: This will now default to disabled. Enable it via KBM > Global Options > Cast-bars > Enable Player Castbar
* Note: This will not effect existing settings.

RezMaster
* Change: Messages are now handled for both .Send and .Broadcast to account for any issues with the API (such as this week).

Version Messages
* Change: See RezMaster.

Mechanic Timers
* Change: Adjusted mechanic timers to only re-render their progress or text if it has changed.

Unit Tracking
* Change: Major change in how unit tracking works. Removed lots of Inspect calls and instead push them directly to Idle.
* Change: Once a unit is officially *seen* by the group, it'll pull the unit from the Idle bin and assign it appropriately.

Infernal Dawn
* Warboss Drak
** Fixed: Drak and his Castbar were not initializing correctly.
** Fixed: Natung and his Castbar were not initializing correctly.

Primeval Feast
* New: Added Template and menu option.
* New: Life Anchors Template.
* New: Atrophinius Template.
* New: Alltha the Reaper Template.
* New: Swarmlord Khargorth
* New: Lord Twyl

----
v1.1.1

Rift Version
* Change: Now compatible with Rift 1.9

System
* Initialization