@@ -10,7 +10,7 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "snarty@gmail.com"
 
-Version = "1.1.4.454"
+Version = "1.1.4.456"
 
 Environment = "1.9"
 
@@ -57,8 +57,8 @@ RunOnStartup = {
 	"10_Man/Primeval_Feast/PFHeader.lua",
 	"10_Man/Primeval_Feast/Anchors.lua",
 	"10_Man/Primeval_Feast/Atrophinius.lua",
-	"10_Man/Primeval_Feast/Alltha.lua",
 	"10_Man/Primeval_Feast/Khargorth.lua",
+	"10_Man/Primeval_Feast/Alltha.lua",
 	"10_Man/Primeval_Feast/Twyl.lua",
 	"10_Man/Rise_of_the_Phoenix/ROTPHeader.lua",
 	"10_Man/Rise_of_the_Phoenix/Ereandorn.lua",
